tests/sksl/errors/MatrixColumnOverflow.glsl
### Compilation failed:

error: 3: argument 2 to 'float2x2' constructor is 'float3', but matrix column only has 1 slot left
error: 4: argument 1 to 'float2x3' constructor is 'float4', but matrix column only has 3 slots left
error: 5: argument 2 to 'float2x4' constructor is 'float4', but matrix column only has 1 slot left
error: 6: argument 2 to 'float3x2' constructor is 'float4', but matrix column only has 2 slots left
error: 7: argument 2 to 'float3x3' constructor is 'float2', but matrix column only has 1 slot left
error: 8: argument 3 to 'float3x4' constructor is 'float4', but matrix column only has 1 slot left
error: 9: argument 1 to 'float4x2' constructor is 'float3', but matrix column only has 2 slots left
error: 10: argument 2 to 'float4x3' constructor is 'float4', but matrix column only has 2 slots left
error: 11: argument 2 to 'float4x4' constructor is 'float4', but matrix column only has 2 slots left
9 errors
